--- a/src/components/nav/responsive.css
+++ b/src/components/nav/responsive.css
@@ -2,6 +2,9 @@
   height: 50px;
   width: 150px;
 }
+.ant-menu-dark.ant-menu-horizontal > .ant-menu-item:hover {
+  background-color: rgba(0, 0, 0, 0) !important;
+}
 
 @media (max-width: 350px) {
   .logo {
